# CursiveRecognizer

./: CMakeLists.txt  README.md
DLP/: CMakeLists.txt  common.cpp  common.h  graph.h  graph_realisation.cpp  layer.cpp  main.cpp  neuron.cpp  neuron.h
datasets/: file1
src/: MLP.cpp  MLP.hpp  Matrix.cpp  Matrix.hpp  main.cpp  test.cpp
src/Graph/: graph.h  graph_realisation.cpp  neuron.cpp
src/Matrix/: Matrix.cpp  Matrix.hpp
src/control/: Control.cpp  Control.hpp
src/untitled3/: form.cpp  form.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  untitled3.pro  weights.w
src/view/: form.cpp  form.h  form.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mlp.pro
